runtime_mypy.txt
openhands/runtime/impl/docker/containers.py:4:1: error: Function is missing a
return type annotation  [no-untyped-def]
    def stop_all_containers(prefix: str):
    ^
openhands/runtime/utils/log_streamer.py:28:5: error: Function is missing a
return type annotation  [no-untyped-def]
        def _stream_logs(self):
        ^
openhands/runtime/utils/log_streamer.py:28:5: note: Use "-> None" if function does not return a value
openhands/runtime/utils/log_streamer.py:40:5: error: Function is missing a type
annotation  [no-untyped-def]
        def __del__(self):
        ^
openhands/runtime/utils/log_streamer.py:44:5: error: Function is missing a
return type annotation  [no-untyped-def]
        def close(self, timeout: float = 5.0):
        ^
openhands/runtime/plugins/agent_skills/file_ops/file_ops.py:41:1: error:
Function is missing a type annotation for one or more arguments 
[no-untyped-def]
    def _is_valid_filename(file_name) -> bool:
    ^
openhands/runtime/plugins/agent_skills/file_ops/file_ops.py:56:1: error:
Function is missing a type annotation for one or more arguments 
[no-untyped-def]
    def _is_valid_path(path) -> bool:
    ^
openhands/runtime/plugins/agent_skills/file_ops/file_ops.py:65:1: error:
Function is missing a type annotation for one or more arguments 
[no-untyped-def]
    def _create_paths(file_name) -> bool:
    ^
openhands/runtime/plugins/agent_skills/file_ops/file_ops.py:84:1: error:
Function is missing a type annotation  [no-untyped-def]
    def _clamp(value, min_value, max_value):
    ^
openhands/runtime/plugins/agent_skills/file_ops/file_ops.py:114:1: error:
Function is missing a type annotation  [no-untyped-def]
    def _print_window(
    ^
openhands/runtime/plugins/agent_skills/file_ops/file_ops.py:171:1: error:
Function is missing a type annotation for one or more arguments 
[no-untyped-def]
    def _cur_file_header(current_file, total_lines) -> str:
    ^
openhands/runtime/impl/e2b/filestore.py:5:5: error: Function is missing a type
annotation  [no-untyped-def]
        def __init__(self, filesystem):
        ^
openhands/runtime/impl/e2b/filestore.py:12:9: error: Returning Any from
function declared to return "str"  [no-any-return]
            return self.filesystem.read(path)
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
openhands/runtime/impl/e2b/filestore.py:15:9: error: Returning Any from
function declared to return "list[str]"  [no-any-return]
            return self.filesystem.list(path)
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
openhands/runtime/utils/system.py:18:1: error: Function is missing a type
annotation for one or more arguments  [no-untyped-def]
    def find_available_tcp_port(min_port=30000, max_port=39999, max_attemp...
    ^
openhands/runtime/plugins/jupyter/execute_server.py:53:5: error: Function is
missing a type annotation  [no-untyped-def]
        def __init__(self, url_suffix, convid, lang='python'):
        ^
openhands/runtime/plugins/jupyter/execute_server.py:68:5: error: Function is
missing a return type annotation  [no-untyped-def]
        async def initialize(self):
        ^
openhands/runtime/plugins/jupyter/execute_server.py:68:5: note: Use "-> None" if function does not return a value
openhands/runtime/plugins/jupyter/execute_server.py:79:5: error: Function is
missing a return type annotation  [no-untyped-def]
        async def _send_heartbeat(self):
        ^
openhands/runtime/plugins/jupyter/execute_server.py:79:5: note: Use "-> None" if function does not return a value
openhands/runtime/plugins/jupyter/execute_server.py:94:5: error: Function is
missing a return type annotation  [no-untyped-def]
        async def _connect(self):
        ^
openhands/runtime/plugins/jupyter/execute_server.py:94:5: note: Use "-> None" if function does not return a value
openhands/runtime/plugins/jupyter/execute_server.py:141:5: error: Function is
missing a type annotation  [no-untyped-def]
        async def execute(self, code, timeout=120):
        ^
openhands/runtime/plugins/jupyter/execute_server.py:175:9: error: Function is
missing a return type annotation  [no-untyped-def]
            async def wait_for_messages():
            ^
openhands/runtime/plugins/jupyter/execute_server.py:210:9: error: Function is
missing a return type annotation  [no-untyped-def]
            async def interrupt_kernel():
            ^
openhands/runtime/plugins/jupyter/execute_server.py:210:9: note: Use "-> None" if function does not return a value
openhands/runtime/plugins/jupyter/execute_server.py:237:5: error: Function is
missing a return type annotation  [no-untyped-def]
        async def shutdown_async(self):
        ^
openhands/runtime/plugins/jupyter/execute_server.py:237:5: note: Use "-> None" if function does not return a value
openhands/runtime/plugins/jupyter/execute_server.py:251:5: error: Function is
missing a type annotation  [no-untyped-def]
        def initialize(self, jupyter_kernel):
        ^
openhands/runtime/plugins/jupyter/execute_server.py:254:5: error: Function is
missing a return type annotation  [no-untyped-def]
        async def post(self):
        ^
openhands/runtime/plugins/jupyter/execute_server.py:254:5: note: Use "-> None" if function does not return a value
openhands/runtime/plugins/jupyter/execute_server.py:268:1: error: Function is
missing a return type annotation  [no-untyped-def]
    def make_app():
    ^
Interrupted
